# cmux

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  model.rs  tea.rs  view.rs
