[package]
name = "cmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bollard = "0.21.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
env_logger = "0.11.11"
futures = "0.3.32"
log = "0.4.33"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
toml = "1.1.2"
